# audio_tutorials

./: .gitignore  AUTHORS  BUILD.bazel  OWNERS  README.md  WORKSPACE  install_iohook.sh  package-lock.json  package.json  play_tutorial.js  sample.js  sample_tutorial.js  tutorial.json  tutorial_generator.js
audio/tutorials/: OWNERS  README.md  package.json
audio/tutorials/generator/: BUILD.bazel  accessibility_event.proto  keyboard_event.proto  mouse_event.proto  tutorial.proto  tutorial_generator.js  tutorial_marker.js
audio/tutorials/player/: play_tutorial.js
base/: BUILD.bazel  hash.c  hash.h  hash_test.cc  hashtable.c  hashtable.h  kv_pair.c  kv_pair.h  kv_pair_test.cc  timestamp.proto
base/audio/: AudioPlayer.swift  AudioPlayerBase.swift  AudioRecorder.swift  BUILD.bazel  recording.proto  service.proto
base/messaging/: BUILD.bazel  messaging.h  request.h  runtime.c  runtime.h  selector.h  service.h
base/messaging/javascript/: messaging.ts  messaging_js.c
iohook/: index.js  package-lock.json
programming/v11/core/accessibility/: BUILD.bazel
programming/v11/core/applications/: BUILD.bazel
programming/v11/core/devices/keyboard/: BUILD.bazel
programming/v11/core/devices/sound/: BUILD.bazel
programming/v11/core/devices/sound/effects/: BUILD.bazel
programming/v11/core/devices/sound/text2speech/: BUILD.bazel
programming/v11/core/notifications/: BUILD.bazel
programming/v11/core/system/: BUILD.bazel
programming/v11/core/system/notifications/: BUILD.bazel
programming/v11/core/system/platform/: BUILD.bazel
programming/v11/runtime/: BUILD.bazel
programming/v11/runtime/@types/: BUILD.bazel
programming/v11/runtime/node/: BUILD.bazel  sound_utils.h
programming/v11/typescript/: BUILD.bazel
programming/v11/utils/: BUILD.bazel  definitions.h  run_main.h
tools/bazel/rules/: node.bzl
tools/gso_downloader/: OWNERS
